--- a/src/main/resources/templates/dictionary.html
+++ b/src/main/resources/templates/dictionary.html
@@ -106,7 +106,8 @@
 <!--顶部工具栏-->
 <script type="text/html" id="dicToolbar">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-xs" lay-event="addDic"><i class="layui-icon layui-icon-add-1"></i>
+        <button class="layui-btn layui-btn-xs" lay-event="addDic">
+            <i class="layui-icon layui-icon-add-1"></i>添加
         </button>
     </div>
 </script>
