--- a/src/main/resources/templates/dept.html
+++ b/src/main/resources/templates/dept.html
@@ -40,17 +40,6 @@
     </div>
 </form>
 
-<script>
-    layui.use('form', function () {
-        let form = layui.form;
-        //监听提交
-        form.on('submit(insertDeptFilter)', function (data) {
-            layer.msg(JSON.stringify(data.field));
-            return false;
-        });
-    });
-</script>
-
 <!--编辑功能的form-->
 <form class="layui-form" action="" id="updateDeptForm" lay-filter="updateDeptForm"
       style="display: none;margin-right: 40px;margin-top: 20px">
@@ -85,16 +74,6 @@
     </div>
 </form>
 
-<script>
-    layui.use('form', function () {
-        let form = layui.form;
-        //监听提交
-        form.on('submit(updateDeptFilter)', function (data) {
-            layer.msg(JSON.stringify(data.field));
-            return false;
-        });
-    });
-</script>
 <!--顶部搜索框-->
 <form class="layui-form" action="" style="margin-top: 10px">
     <div class="layui-inline">
@@ -127,10 +106,12 @@
 <!--顶部工具栏-->
 <script type="text/html" id="deptToolbar">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-xs" lay-event="addDept"><i class="layui-icon layui-icon-add-1"></i>
+        <button class="layui-btn layui-btn-xs" lay-event="addDept">
+            <i class="layui-icon layui-icon-add-1"></i>添加
         </button>
-        <button class="layui-btn layui-btn-danger layui-btn-xs" lay-event="deleteDepts"><i
-                class="layui-icon layui-icon-delete"></i></button>
+        <button class="layui-btn layui-btn-danger layui-btn-xs" lay-event="deleteDepts">
+            <i class="layui-icon layui-icon-delete"></i>删除
+        </button>
     </div>
 </script>
 <!--实现部门管理操作功能按钮-->
