--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -145,7 +145,9 @@
 <!--menu顶部工具栏-->
 <script type="text/html" id="menuToolbar">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-xs" lay-event="addMenu">添加菜单</button>
+        <button class="layui-btn layui-btn-xs" lay-event="addMenu">
+            <i class="layui-icon layui-icon-add-1"></i>添加
+        </button>
         <button id="expandAll" class="layui-btn layui-btn-xs layui-btn-primary">
             <i class="layui-icon layui-icon-shrink-right"></i>展开全部
         </button>
