--- a/src/main/resources/templates/role.html
+++ b/src/main/resources/templates/role.html
@@ -14,7 +14,9 @@
 <!--头部工具栏按钮-->
 <script type="text/html" id="roleToolbar">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-xs" lay-event="add">添加角色</button>
+        <button class="layui-btn layui-btn-xs" lay-event="add">
+            <i class="layui-icon layui-icon-add-1"></i>添加
+        </button>
     </div>
 </script>
 <!--操作按钮-->
