--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -197,8 +197,12 @@
 <!--头部工具栏按钮-->
 <script type="text/html" id="userToolbar">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-xs" lay-event="add">添加</button>
-        <button class="layui-btn layui-btn-xs layui-btn-danger" lay-event="delSelected">删除</button>
+        <button class="layui-btn layui-btn-xs" lay-event="add">
+            <i class="layui-icon layui-icon-add-1"></i>添加
+        </button>
+        <button class="layui-btn layui-btn-xs layui-btn-danger" lay-event="delSelected">
+            <i class="layui-icon layui-icon-delete"></i>删除
+        </button>
     </div>
 </script>
 <!--操作按钮-->
