--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -80,6 +80,7 @@
     <input type="hidden" name="uploadSourceName" id="uploadSourceName">
     <input type="hidden" name="noticeSourceName" id="noticeSourceName">
 
+
     <div class="layui-form-item">
         <label class="layui-form-label">进度类型</label>
         <div class="layui-input-block">
@@ -236,9 +237,17 @@
                 ]
             },
             done: function (elem, data) {
+
                 //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
                 //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
-                elem.val(data.data[0].businessId);
+                let businessId = data.data[0].businessId
+                console.log(businessId);
+                elem.val(businessId);
+
+                $.ajax({
+                    url: "/progress/businessIdSession?businessId=" + businessId,
+                    type: "GET",
+                });
             }
         })
 
@@ -468,7 +477,6 @@
 
         //修改表单提交按钮事件
         form.on('submit(updateProgressFilter)', function (data) {
-            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
             //提交表单数据
             $.ajax({
                 url: "/progress/update",
@@ -497,7 +505,7 @@
         //增加的文件上传
         let insertAddUpload = upload.render({
             elem: '#insertAddUpload'
-            , url: '/file/upload' //上传接口
+            , url: '/file/upload'  //上传接口
             , accept: 'file' //普通文件
             , exts: 'zip|rar'
             , done: function (res) {
